--- a/angular.json
+++ b/angular.json
@@ -3,11 +3,27 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "mp3-converter": {
+    "mp3-converter-hy": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
-          "style": "scss"
+          "style": "scss",
+          "skipTests": true
+        },
+        "@schematics/angular:class": {
+          "skipTests": true
+        },
+        "@schematics/angular:directive": {
+          "skipTests": true
+        },
+        "@schematics/angular:pipe": {
+          "skipTests": true
+        },
+        "@schematics/angular:service": {
+          "skipTests": true
+        },
+        "@schematics/angular:guard": {
+          "skipTests": true
         }
       },
       "root": "",
@@ -17,7 +33,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/mp3-converter",
+            "outputPath": "dist/mp3-converter-hy",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": [
@@ -65,10 +81,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "mp3-converter:build:production"
+              "browserTarget": "mp3-converter-hy:build:production"
             },
             "development": {
-              "browserTarget": "mp3-converter:build:development"
+              "browserTarget": "mp3-converter-hy:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -76,7 +92,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "mp3-converter:build"
+            "browserTarget": "mp3-converter-hy:build"
           }
         },
         "test": {
