--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
-  "name": "mp3-converter",
+  "name": "mp3-converter-hy",
   "version": "0.0.0",
+  "author": "Sergey Arzumanyan",
+  "license": "ISC",
   "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "start": "ng serve --port=2222",
+    "build:stg": "ng build --configuration=development",
+    "build:prod": "ng build --configuration=production",
+    "test": "ng test",
+    "lint": "ng lint"
   },
   "private": true,
   "dependencies": {
@@ -20,7 +22,13 @@
     "@angular/router": "^16.2.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.13.0"
+    "zone.js": "~0.13.0",
+    "firebase": "^10.3.1",
+    "@angular/fire": "^7.6.1",
+    "primeicons": "^6.0.1",
+    "primeng": "^16.3.1",
+    "@ngx-translate/core": "^15.0.0",
+    "@ngx-translate/http-loader": "^8.0.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.2.0",
@@ -33,6 +41,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.1.3"
+    "typescript": "~5.1.3",
+    "eslint": "^8.49.0"
   }
 }
