Added Light And Dark Mode Functionality, Added Local Fonts, Icons, Added Normalize.css To The Project.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,6 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
-    "baseUrl": "./",
     "outDir": "./dist/out-tsc",
     "forceConsistentCasingInFileNames": true,
     "strict": true,
@@ -22,7 +21,14 @@
     "lib": [
       "ES2022",
       "dom"
-    ]
+    ],
+    "baseUrl": "src",
+    "paths": {
+      "@Components/*": ["app/components/*"],
+      "@Pages/*": ["app/pages/*"],
+      "@Shared/*": ["app/shared/*"],
+      "@Core/*": ["app/core/*"]
+    }
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
