--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "ng serve --port=2222",
     "build:stg": "ng build --configuration=development",
     "build:prod": "ng build --configuration=production",
+    "generate:styles": "sass --update src/assets/themes/theme-light.scss:src/assets/themes/theme-light.css && sass --update src/assets/themes/theme-dark.scss:src/assets/themes/theme-dark.css && sass --update src/assets/layouts/layout-light.scss:src/assets/layouts/layout-light.css && sass --update src/assets/layouts/layout-dark.scss:src/assets/layouts/layout-dark.css",
     "test": "ng test",
     "lint": "ng lint"
   },
@@ -16,32 +17,40 @@
     "@angular/common": "^16.2.0",
     "@angular/compiler": "^16.2.0",
     "@angular/core": "^16.2.0",
+    "@angular/fire": "^7.6.1",
     "@angular/forms": "^16.2.0",
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
-    "rxjs": "~7.8.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.13.0",
+    "@ngx-translate/core": "^15.0.0",
+    "@ngx-translate/http-loader": "^8.0.0",
     "firebase": "^10.3.1",
-    "@angular/fire": "^7.6.1",
+    "normalize.css": "^8.0.1",
     "primeicons": "^6.0.1",
     "primeng": "^16.3.1",
-    "@ngx-translate/core": "^15.0.0",
-    "@ngx-translate/http-loader": "^8.0.0"
+    "rxjs": "~7.8.0",
+    "tslib": "^2.3.0",
+    "zone.js": "~0.13.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.2.0",
+    "@angular-eslint/builder": "16.1.2",
+    "@angular-eslint/eslint-plugin": "16.1.2",
+    "@angular-eslint/eslint-plugin-template": "16.1.2",
+    "@angular-eslint/schematics": "16.1.2",
+    "@angular-eslint/template-parser": "16.1.2",
     "@angular/cli": "~16.2.0",
     "@angular/compiler-cli": "^16.2.0",
     "@types/jasmine": "~4.3.0",
+    "@typescript-eslint/eslint-plugin": "5.62.0",
+    "@typescript-eslint/parser": "5.62.0",
+    "eslint": "^8.47.0",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.1.3",
-    "eslint": "^8.49.0"
+    "typescript": "~5.1.3"
   }
 }
