--- a/angular.json
+++ b/angular.json
@@ -46,7 +46,17 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss",
+              "src/styles/styles.scss",
+              {
+                "input": "src/styles/themes/_dark-theme.scss",
+                "inject": false,
+                "bundleName": "dark-theme"
+              },
+              {
+                "input": "src/styles/themes/_light-theme.scss",
+                "inject": false,
+                "bundleName": "light-theme"
+              },
               "node_modules/primeicons/primeicons.css",
               "node_modules/primeng/resources/themes/lara-light-blue/theme.css",
               "node_modules/primeng/resources/primeng.min.css"
@@ -112,7 +122,20 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles/styles.scss",
+              {
+                "input": "src/styles/themes/_dark-theme.scss",
+                "inject": false,
+                "bundleName": "dark-theme"
+              },
+              {
+                "input": "src/styles/themes/_light-theme.scss",
+                "inject": false,
+                "bundleName": "light-theme"
+              },
+              "node_modules/primeicons/primeicons.css",
+              "node_modules/primeng/resources/themes/lara-light-blue/theme.css",
+              "node_modules/primeng/resources/primeng.min.css"
             ],
             "scripts": []
           }
