- Added Github Action For Firebase Auto-Deployment.

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,17 +1,9 @@
 {
   "projects": {
-    "default": "mp3-converter-hy-stg",
-    "staging": "mp3-converter-hy-stg",
-    "production": "mp3-converter-hy"
+    "default": "mp3-converter-hy",
+    "prod": "mp3-converter-hy"
   },
   "targets": {
-    "mp3-converter-hy-stg": {
-      "hosting": {
-        "mp3-converter-hy-stg": [
-          "mp3-converter-hy-stg"
-        ]
-      }
-    },
     "mp3-converter-prod": {
       "hosting": {
         "mp3-converter-prod": [
