--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,4 +27,4 @@ jobs:
         run: npm install -g firebase-tools
 
       - name: Deploying To Firebase Hosting
-        run: firebase deploy --project mp3-converter-prod --token=${{ secrets.FIREBASE_TOKEN }}
+        run: firebase deploy --project mp3-converter-hy --token=${{ secrets.FIREBASE_TOKEN }}
